alignment corrected

--- a/style.css
+++ b/style.css
@@ -206,7 +206,10 @@ li {
   padding: 20px;
   background-color: #2d3e66;
   color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: space-between;
 }
+
 .wedding_catagories_img img {
   width: 200px;
 }
